version mobile correctifs mineures

--- a/mer-a/public/css/common.css
+++ b/mer-a/public/css/common.css
@@ -11,6 +11,13 @@
   display: inline-block;
   font-weight: bold;
   text-transform: uppercase;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
 }
 
 .button:hover, #audio_control.active {
